Bug 346767 - Context menu has no "Mailing list" option in separate view window
Summary: Context menu has no "Mailing list" option in separate view window
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.14.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-27 08:50 UTC by Vovochka
Modified: 2015-04-27 11:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.8
Sentry Crash Report:


Attachments
"Mailing-list" menu entry in split view (201.99 KB, image/png)
2015-04-27 08:51 UTC, Vovochka
Details
Menu in separate view (without "Mailing-list") (222.63 KB, image/png)
2015-04-27 08:52 UTC, Vovochka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vovochka 2015-04-27 08:50:39 UTC
When clicking RMB on email with List-* headers in list or in separate window view there is no "Mailing-List" menu entry.
It is only available in mail, viewed in split view.

See screen for better understanding :)

Reproducible: Always
Comment 1 Vovochka 2015-04-27 08:51:46 UTC
Created attachment 92256 [details]
"Mailing-list" menu entry in split view
Comment 2 Vovochka 2015-04-27 08:52:52 UTC
Created attachment 92257 [details]
Menu in separate view (without "Mailing-list")
Comment 3 Laurent Montel 2015-04-27 11:18:34 UTC
Git commit 5432036d00852b7c37e39aa44adf50bace1168bb by Montel Laurent.
Committed on 27/04/2015 at 11:17.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 346767 - Context menu has no "Mailing list" option in separate view window
FIXED-IN: 4.14.8

M  +4    -0    kmail/kmreadermainwin.cpp
M  +2    -1    kmail/kmreadermainwin.rc

http://commits.kde.org/kdepim/5432036d00852b7c37e39aa44adf50bace1168bb
Comment 4 Vovochka 2015-04-27 11:25:57 UTC
Heh... Thats quick.

Is there a chance to add this meny entry when RMB on main in list?
Comment 5 Laurent Montel 2015-04-27 11:35:02 UTC
"Is there a chance to add this meny entry when RMB on main in list?" on messagelist ? treelist ?
no it's not possible we need to have header to know if we can do it.
and we don't have it here.
Regards
Comment 6 Vovochka 2015-04-27 11:36:14 UTC
Heh.. As i thought... Anyway, thenks for reply :)