Fix Bug 346767 - Context menu has no "Mailing list" option in separate view window

BUG: 346767
FIXED-IN: 4.14.8